@startuml application_budgeting
skinparam classAttributeIconSize 0
hide empty members
skinparam shadowing false
skinparam roundcorner 6
skinparam packageStyle rectangle
skinparam nodesep 20
skinparam ranksep 25

title Budgeting Application Model

package budgeting.application {
  interface GetBudgetsByOrganizationalUnitUseCase << (I, #00FF77) >> {
    + List<OrganizationalUnitBudgetDto> execute(OrganizationalUnitId organizationalUnitId, boolean includeSubtree)
  }
  interface CreateOrganizationalUnitBudgetsUseCase << (I, #00FF77) >> {
    + PaginatedBudgetsResult execute(CreateOrganizationalUnitBudgetsCommand command)
  }

  class CreateOrganizationalUnitBudgetsCommand << (R, #FF7700) record >>
  class OrganizationalUnitBudgetDto << (R, #FF7700) record >>
  class PaginatedBudgetsResult << (R, #FF7700) record >>

  class GetBudgetsByOrganizationalUnitService
  class CreateOrganizationalUnitBudgetsService

  class BudgetNotFoundException << (E, #FF5555) >>
}

package budgeting.domain <<Folder>> {
  interface BudgetRepository << (I, #00FF77) >>
  class Budget << (R, #FF7700) record >>
  class BudgetId << (R, #FF7700) record >>
}

package organization.application <<Folder>> {
  interface GetOrganizationalUnitUseCase << (I, #00FF77) >>
  interface GetSubtreeOrganizationalUnitsUseCase << (I, #00FF77) >>
  interface AssignOwnerUseCase << (I, #00FF77) >>
}

GetBudgetsByOrganizationalUnitService ..|> GetBudgetsByOrganizationalUnitUseCase
CreateOrganizationalUnitBudgetsService ..|> CreateOrganizationalUnitBudgetsUseCase

GetBudgetsByOrganizationalUnitService --> BudgetRepository : uses
GetBudgetsByOrganizationalUnitService --> GetOrganizationalUnitUseCase : uses
GetBudgetsByOrganizationalUnitService --> GetSubtreeOrganizationalUnitsUseCase : uses

CreateOrganizationalUnitBudgetsService --> BudgetRepository : uses
CreateOrganizationalUnitBudgetsService --> GetOrganizationalUnitUseCase : uses
CreateOrganizationalUnitBudgetsService --> GetSubtreeOrganizationalUnitsUseCase : uses
CreateOrganizationalUnitBudgetsService --> AssignOwnerUseCase : uses

@enduml
